Better fix for missing borders on aggregated rows

--- a/srcjs/assets/reactable.css
+++ b/srcjs/assets/reactable.css
@@ -147,7 +147,7 @@
   border-top: 1px solid hsl(0, 0%, 95%);
 }
 
-.rt-tr-group:first-child .rt-td {
+.rt-tr-group:first-child > .rt-tr:first-child .rt-td {
   border-top: none;
 }
 
@@ -157,11 +157,6 @@
 
 .rt-tfoot .rt-td {
   border-top: 1px solid hsl(0, 0%, 90%);
-}
-
-.-bordered .rt-tr-group:first-child > .rt-tr-group .rt-td {
-  /* Borders for aggregated rows */
-  border-top: 1px solid hsl(0, 0%, 95%);
 }
 
 .-bordered .rt-td,
